Instancing Geometry on Imported Alembic Particles produces extremely long render times when motion blur is enabled. #109185
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#109185
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98
Blender Version
Broken: version: 3.5.1 Release Candidate, commit date: 2023-04-03 16:00, hash:
ef7e83c7ff15
Worked: (newest version of Blender that worked as expected)
Short description of error
Instancing geometry on Imported animated Alembic Particles using geometry nodes produces extremely long render times when motion blur is enabled. Turning off motion blur or realizing instances reduces the render time back to its normal average length.
Exact steps for others to reproduce the error
Hi @ben-webber , could you provide us a blend/alembic file that can replicate the issue? Thanks!
Is there an upload limit? The alembic is about 150mb
@ben-webber Could you try trimming it down a bit? Or you could also use google drive or something.
Blender
alembic is uploading to google drive
https://drive.google.com/file/d/1yuBvgwM2S4ATIdgaLDaQB238YelxGtB8/view?usp=sharing
So the .abc provides a .velocities Property (checked with abcls), but still MB seems quite random and with long streaks -- which kind of explains the long rendertimes:
So apparently the velocity vectors are not supposed to be transferred to instances (known limitation for now), but another possibility would be to render points directly (MB is supposed to work then).
Cant get this to work though, will check again tomorrow
OK, so after some digging I can verify that
.velocities
(even on varying point count).velocities
from blender you have to set up a Geometry Nodetree storing a Named Attribute called "velocity" -- check on the Internet on how to do this, also see128eb6cbe9
)I will quickly check if adding this is straightforward (if not this might get closed as a Known Limitation I am afraid)
This is a very long standing issue and I guess @kevindietrich already invested a lot of work in this.
Maybe it would be best to contact him about this.
I dont mean transferring the velocities to instances, I will look into just reading the velocities for points (in order to render points directly)
I also didn't mean the transfer but only the import / export of velocity (or even arbitrary attributes) on points.
#95945 (comment)
So velocity wasnt that hard, not sure if this will be considered outside of https://archive.blender.org/developer/D11591
(can post a patch for this shortly)
Patch is up in !116749
Beautiful. Finally some movement.
Does this mean, you can commit it already?
Committed
472cf44166
now, so velocities are now read for points, you can render them directly with Cycles (as mathematical spheres).The lack of propagating these to instances is still here though, so motionblur for them (on changing pointcounts) is still unreliable/wrong and can have high rendertimes (because their motion boundingboxes can be very large).
@brecht : do we want to keep this as Known Limitation?
Yes, known issue makes sense.